stop tables wrapping mid-word

--- a/_sass/garden.scss
+++ b/_sass/garden.scss
@@ -58,7 +58,7 @@ h6 {
 }
 
 table {
-  word-break: break-word;
+  // word-break: break-word;
   white-space: break-spaces;
   @extend .w-full;
 }
